src/test_compilateur/tst/ok/suite_double_post_add.c
int main() {
    double u=5.0;
    int i;
    for(i=0;i<10;i++) {
        u=u/4;
        u++;
    }
    return 0;
}
