src/test_compilateur/tst/error/Area_wrong__missing_semicolon.c
int main() {
	int height,base;
	double ans;
	
	ans=(1/2.0)*height*base
	  int toto;
	  return 0;
}
